# label-a-just-go

./: 64x3-CNN.model  Identify.py  README.md  X.pickle  Y.pickle  a.py  erdplus.sql  reshape_data.py
api/: Cargo.toml  Dockerfile  docker-compose.yml  extract_face.py
api/migrations/2019-05-13-095103_base/: down.sql  up.sql
api/src/: main.rs  schema.rs
api/src/extensions/: uuid.rs
api/src/models/: api_result.rs  mod.rs  user.rs
api/src/routes/: mod.rs
api/src/routes/api/v1/: mod.rs
api/src/utils/: facial_recognition.rs  mod.rs
backend/: .gitignore  Cargo.toml  Dockerfile  docker-compose.prod.yml  docker-compose.yml
backend/migrations/2019-05-20-143828_base/: down.sql  up.sql
backend/migrations/2019-05-26-001934_sample-data/: down.sql  up.sql
backend/scripts/: extract_face.py
backend/src/: main.rs  models.rs  route_handlers.rs  routes.rs  schema.rs  utils.rs
backend/src/repositories/: event_invitation.rs  mod.rs  person.rs
backend/src/utils/: facial_recognition.rs  mod.rs
logs/3-conv-64-nodes-0-dense-1557776058/: events.out.tfevents.1557776059.DESKTOP-72DJB7R
python_facial_recognition/: README.md  data.json  encode_faces.py  encodings.pickle  extract_embeddings.py  recognize_faces_video.py  recognize_video.py  train_model.py
python_facial_recognition/output/: embeddings.pickle  le.pickle  recognizer.pickle
register_app/: README.md  pubspec.yaml
register_app/android/app/: build.gradle
register_app/ios/Runner.xcodeproj/: project.pbxproj
register_app/lib/: main.dart
register_backend/: index.js  package-lock.json  package.json
(+12 files in other folders)
