[package]
name = "backend"
version = "0.1.0"
authors = ["Dennis Kievits <denkievits@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0.0-rc"
uuid = { version = "0.7", features = ["serde", "v4"] }
futures = "0.1.27"
r2d2 = "0.8.4"
serde_derive = "1.0.91"
serde_json = "1.0.39"
serde = "1.0.91"
diesel = { version = "1.0.0", features = ["postgres"] }
diesel-derive-enum = { version = "0.4.4", features = ["postgres"] }
chrono = { version = "0.4.6", features = ["serde"] }
actix-multipart = "0.1.0"
actix-service = "0.4.0"
derive_more = "0.14.0"